--- a/HpToolsLauncher/Properties/Resources.resx
+++ b/HpToolsLauncher/Properties/Resources.resx
@@ -212,10 +212,10 @@ Save the test in QuickTest and then run it again.</value>
     <value>Starting test set execution</value>
   </data>
   <data name="AlmRunnerStat" xml:space="preserve">
-    <value>Test: {0}, Id: {1}, Execution status: {2}\n</value>
+    <value>Test: {0}, Id: {1}, Execution status: {2}</value>
   </data>
   <data name="AlmRunnerStatWithMessage" xml:space="preserve">
-    <value>Test: {0}, Id: {1}, Execution status: {2}, Message: {3}\n</value>
+    <value>Test: {0}, Id: {1}, Execution status: {2}, Message: {3}</value>
   </data>
   <data name="AlmRunnerTestCompleteCaption" xml:space="preserve">
     <value>Test complete:</value>
@@ -224,7 +224,7 @@ Save the test in QuickTest and then run it again.</value>
     <value>Test set: {0}, finished at {1}</value>
   </data>
   <data name="AlmRunnerTestStat" xml:space="preserve">
-    <value>Test: {0}, Status: {1}, Message: {2}, Link: {3}\n</value>
+    <value>Test: {0}, Status: {1}, Message: {2}, Link: {3}</value>
   </data>
   <data name="FsRunnerNoValidTests" xml:space="preserve">
     <value>===============================\nThere are no valid tests to run!\n===============================</value>
@@ -313,8 +313,8 @@ Save the test in QuickTest and then run it again.</value>
   <data name="LauncherTimeoutNotNumeric" xml:space="preserve">
     <value>almTimeout should be an integer!</value>
   </data>
-  <data name="LuancherDisplayTimout" xml:space="preserve">
-    <value>Timeout is set to: {0}</value>
+  <data name="LauncherDisplayTimout" xml:space="preserve">
+    <value>Timeout is set to: {0} seconds</value>
   </data>
   <data name="SingleSeperator" xml:space="preserve">
     <value>-------------------------------------------------------------------------------------------------------</value>
@@ -504,5 +504,8 @@ Save the test in QuickTest and then run it again.</value>
   </data>
   <data name="JavaPropertyFileBOMNotSupported" xml:space="preserve">
     <value>The encoding of the parameter file is not supported. Please save the file with UTF-8 encoding.</value>
+  </data>
+  <data name="AlmRunnerDisplayTestRunOnPlannedHost" xml:space="preserve">
+    <value>Test {0}: {1} will run on host or host group: {2}</value>
   </data>
 </root>
