--- a/HpToolsLauncher/Properties/Resources.resx
+++ b/HpToolsLauncher/Properties/Resources.resx
@@ -162,7 +162,7 @@ Save the test in UFT One and then run it again.</value>
   </data>
   <data name="AlmRunnerMissingOrInvalidTestSetPath" xml:space="preserve">
     <value>Missing or invalid Test Set path.</value>
-  </data>	
+  </data>
   <data name="AlmRunnerConnParamEmpty" xml:space="preserve">
     <value>One or more of the required connection parameters is empty.</value>
   </data>
@@ -535,5 +535,8 @@ Error details: {0}
   </data>
   <data name="AlmTimeoutInfinite" xml:space="preserve">
     <value>Timeout is set to: infinite (-1)</value>
+  </data>
+  <data name="FileSystemTestsRunner_Run_Auto_Cancelled" xml:space="preserve">
+    <value>The run was automatically cancelled due to timeout or cancelRunOnFailure settings.</value>
   </data>
 </root>
